--- a/workspaces/client/package.json
+++ b/workspaces/client/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.5.1",
+    "chart.js": "^3.7.1",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
+    "react-chartjs-2": "^4.1.0",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.3.0",
