--- a/workspaces/client/package.json
+++ b/workspaces/client/package.json
@@ -1,25 +1,24 @@
 {
-  "name": "frontend",
-  "version": "0.1.0",
+  "name": "@santander-calculator-widget/app",
+  "version": "1.0.0",
   "private": true,
+  "author": "Håkan Sundström <sundarenius@gmail.com>",
   "dependencies": {
     "@reduxjs/toolkit": "^1.5.1",
-    "chart.js": "^3.7.1",
-    "lodash": "^4.17.21",
     "react": "^17.0.2",
-    "react-chartjs-2": "^4.1.0",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.0",
-    "react-router-dom": "^5.3.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "sass": "^1.42.1",
-    "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^2.0.4",
-    "uuid": "^8.3.2"
+    "semantic-ui-css": "2.4.1",
+    "semantic-ui-react": "2.0.3",
+    "chart.js": "^3.7.1",
+    "lodash": "^4.17.21",
+    "react-chartjs-2": "^4.1.0"
   },
   "scripts": {
-    "start": "NODE_ENV=development react-scripts start",
-    "build": "NODE_ENV=production react-scripts build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -40,21 +39,22 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
-    "@types/lodash": "^4.14.174",
     "@types/node": "^12.0.0",
+    "@types/prismjs": "^1.16.5",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.7",
-    "@types/react-router-dom": "^5.3.0",
-    "@typescript-eslint/eslint-plugin": "^4.31.2",
-    "@typescript-eslint/parser": "^4.31.2",
-    "eslint": "^7.32.0",
+    "@types/react-router-dom": "^5.1.7",
+    "@typescript-eslint/eslint-plugin": "^4.26.1",
+    "@typescript-eslint/parser": "^4.26.1",
+    "cross-env": "^7.0.3",
+    "eslint": "^7.28.0",
     "eslint-config-airbnb": "^18.2.1",
-    "eslint-plugin-import": "^2.24.2",
-    "eslint-plugin-jest": "^24.4.2",
+    "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.26.0",
+    "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "node-sass": "^6.0.0",
     "typescript": "~4.1.5"
   }
 }
